index.html Calls External js Script Change Bckgrnd

--- a/js_temp/index.html
+++ b/js_temp/index.html
@@ -8,6 +8,7 @@
          height: 500px;
       }
    </style>
+   <script type = "text/javascript" src="index.js"></script>w\
 </head>
 <body>
    <h2>Dreaming in Code</h2>
@@ -16,12 +17,6 @@
       <button onclick="changeBackgroundColor()">
          Press it to change Background Color
       </button>
-      <!-- Script functionality of backgroundColor property-->
-      <script>
-      function changeBackgroundColor() {
-         document.getElementById("divsection").style.backgroundColor = "blue";
-      }
-      </script>
    </div>
 </body>
 </html>
